# ainote

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FILETREE_DRAG_DROP_DOCUMENTATION.md  FILETREE_TEST_PLAN.md  GITHUB_PROJECT_MANAGEMENT_PLAN.md  LICENSE  MEMORY_MANAGEMENT_IMPLEMENTATION.md  PERFORMANCE_MONITORING_IMPLEMENTATION.md  README.md  SKIP_ISSUE_40_EVALUATION.md  SYNTAX_HIGHLIGHTING_ANALYSIS.md  TESTING_PERFORMANCE_MONITORING.md  VECTOR_DB_TECHNICAL_DOCUMENTATION.md  issue-58-validation-report.json  package.json  phase-1-implementation-plan.md  pnpm-lock.yaml  run-comprehensive-tests.js  test-advanced-features.html  test-advanced-features.md  test-cursor-fix.html  test-cursor-positioning.html  test-editor-preview-panel.html  test-error-scenarios.html  test-html-rendering.html  test-minimal-fix.html  test-no-syntax-highlighting.html  test-performance-stress.html  test-realtime-preview.html  test-simple-debug.html  test-syntax-highlighting-comprehensive.html  test-syntax-highlighting-simple.html  test-syntax-highlighting.html  test-vault-management.html  validate-issue-58.cjs  vitest.config.js
src-tauri/: Cargo.toml  tauri.conf.json  test_summary.md
src-tauri/benches/: ollama_benchmarks.rs  search_benchmarks.rs  vector_db_benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/src/: ai_operation_manager.rs  app_setup.rs  background_processor.rs  benchmarks.rs  embedding_cache.rs  embedding_generator.rs  embedding_queue.rs  embedding_tests.rs  errors.rs  file_locks.rs  file_monitor.rs  file_operations.rs  globals.rs  indexing_pipeline.rs  lib.rs  main.rs  (+20 more)
(+169 files in other folders)
