[package]
name = "ainote"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ainote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
thiserror = "1"
anyhow = "1"
dirs = "5"
walkdir = "2"
notify = "6"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
futures = "0.3"
regex = "1.10"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
rand = "0.8"

# Benchmark configuration
[[bench]]
name = "ollama_benchmarks"
harness = false

# Test configuration
[profile.test]
opt-level = 1
debug = true
overflow-checks = true

